# mykey

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  NOTICE  README.md  SECURITY.md
.github/: CODEOWNERS
.github/workflows/: ci.yml  docs.yml
book/: book.toml
book/doc/mykey/: index.html
book/src/: SUMMARY.md  api-reference.md  cookbook.md  introduction.md  sap.md  security-policy.md
book/src/concepts/: key-exchange-modes.md  mikey-srtp.md  wire-format.md
book/src/identity/: overview.md  pinning.md
book/src/key-exchange/: ephemeral-dh.md  psk.md
src/: crypto.rs  error.rs  identity.rs  lib.rs  message.rs  payload.rs  policy.rs  sap.rs  srtp.rs
