[package]
name = "mykey"
version = "1.0.0"
edition = "2021"
description = "MIKEY (RFC 3830) — Multimedia Internet KEYing for SRTP key exchange"
license = "MIT OR Apache-2.0"
authors = ["Ben Bryan"]
repository = "https://github.com/waxspin/mykey"
documentation = "https://waxspin.github.io/mykey/doc/mykey/"
homepage = "https://waxspin.github.io/mykey"

[dependencies]
thiserror = "1"
rand = "0.9"
rand_core = { version = "0.6", features = ["getrandom"] }
hmac = "0.12"
sha1 = "0.10"
hex = "0.4"

# DH / ECDH key exchange
x25519-dalek = { version = "2", features = ["static_secrets"] }

# For SAP/SDP base64 encoding
base64 = "0.22"
